asyncronious repos loading

--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/postitem_post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="дефолтный текст"
+        android:text="main text"
         android:textColor="?android:attr/textColorPrimary"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -18,7 +18,7 @@
         android:id="@+id/postitem_site"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="bash"
+        android:text="bottom-right-text"
         android:layout_below="@+id/postitem_post"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
