--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,12 @@
         android:layout_alignParentLeft="true"
         android:id="@+id/posts_recycle_view"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="Данные загружаются..." />
 </RelativeLayout>
