--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/postitem_post"
+        android:id="@+id/repoitem"
         android:layout_width="407dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="bottom-right-text"
-        android:layout_below="@+id/postitem_post"
+        android:layout_below="@+id/repoitem"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:gravity="end"
@@ -32,8 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="bottom-left-text"
-        android:layout_below="@+id/postitem_post"
+        android:layout_below="@+id/repoitem"
         android:gravity="end"
         android:textAlignment="textEnd"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
 </RelativeLayout>
