repo's contributors displaying

--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/repoitem"
+        android:id="@+id/main_text_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="main text"
@@ -19,7 +19,7 @@
 
 
     <TextView
-        android:id="@+id/commits"
+        android:id="@+id/top_right_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="top right"
@@ -32,22 +32,22 @@
         android:textColor="?android:attr/textColorPrimary" />
 
     <TextView
-        android:id="@+id/postitem_site"
+        android:id="@+id/bottom_rigth_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="bottom-right-text"
-        android:layout_below="@+id/repoitem"
+        android:layout_below="@+id/main_text_item"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:gravity="end"
         android:textAlignment="textEnd" />
 
     <TextView
-        android:id="@+id/index"
+        android:id="@+id/bottom_left_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="bottom-left-text"
-        android:layout_below="@+id/repoitem"
+        android:layout_below="@+id/main_text_item"
         android:gravity="end"
         android:textAlignment="textEnd"
         android:layout_alignParentStart="true"
