ugly viewholder for repositories' list's items; according to requirements

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,5 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:visibility="gone"
-        android:text="Данные загружаются..." />
+        android:text="Loading data..." />
 </RelativeLayout>
