--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/main_text_item"
+        android:id="@+id/main_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="main text"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="bottom-right-text"
-        android:layout_below="@+id/main_text_item"
+        android:layout_below="@+id/main_text"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:gravity="end"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="bottom-left-text"
-        android:layout_below="@+id/main_text_item"
+        android:layout_below="@+id/main_text"
         android:gravity="end"
         android:textAlignment="textEnd"
         android:layout_alignParentStart="true"
