--- a/app/src/main/res/layout/repo_activity.xml
+++ b/app/src/main/res/layout/repo_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,18 +11,26 @@
         android:textColor="#000"
         android:textSize="16sp"
         android:text="Repo info" />
+    <LinearLayout
+    android:id="@+id/buttons_holder"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_alignParentBottom="true">
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/button_contributors"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="Contributors" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/button_commits"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="Commits" />
+    </LinearLayout>
 </LinearLayout>
