--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
+        android:layout_margin="5dp"
         android:layout_marginLeft="0dp"
 
         android:textColor="?android:attr/textColorPrimary"
@@ -27,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="top right"
+        android:layout_margin="5dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
@@ -39,6 +41,7 @@
         android:id="@+id/bottom_rigth_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="bottom-right-text"
         android:layout_below="@+id/main_text"
         android:layout_alignParentRight="true"
@@ -50,6 +53,7 @@
         android:id="@+id/bottom_left_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="bottom-left-text"
         android:layout_below="@+id/main_text"
         android:gravity="end"
