--- a/app/src/main/res/layout/repo_list_item.xml
+++ b/app/src/main/res/layout/repo_list_item.xml
@@ -13,15 +13,19 @@
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="16sp"
         android:layout_alignParentLeft="true"
-        android:textStyle="bold"
+
+        android:padding="10dp"
         android:layout_alignParentStart="true" />
-        <!-- android:layout_above="@id/additional_info" -->
+        <!--
+        android:textStyle="bold"
+        android:layout_above="@id/additional_info" -->
 
 
     <RelativeLayout
         android:id="@+id/additional_info"
         android:layout_below="@id/main_text"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content">
 
         <ImageView
@@ -37,6 +41,8 @@
             android:id="@+id/stargazers_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="5dp"
             android:text="left"
             android:textColor="#000"
             android:layout_toRightOf="@id/star"
@@ -55,7 +61,10 @@
             android:id="@+id/contributors_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/fork"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_toEndOf="@+id/fork"
+            android:layout_toRightOf="@+id/fork"
             android:text="right"
             android:textColor="#000"
             android:textSize="16sp" />
