--- a/app/src/main/res/layout/repo_list_item.xml
+++ b/app/src/main/res/layout/repo_list_item.xml
@@ -14,7 +14,7 @@
         android:textSize="16sp"
         android:layout_alignParentLeft="true"
 
-        android:padding="10dp"
+        android:layout_margin="5dp"
         android:layout_alignParentStart="true" />
         <!--
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:id="@+id/additional_info"
         android:layout_below="@id/main_text"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_margin="5dp"
         android:layout_width="wrap_content">
 
         <ImageView
