--- a/app/src/main/res/layout/basic_activity.xml
+++ b/app/src/main/res/layout/basic_activity.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/viewmodel_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/posts_recycle_view"
-        android:layout_alignParentStart="true" />
+        android:background="@android:color/darker_gray"
+        tools:listitem="@layout/recyclerview_item" />
 
     <TextView
         android:id="@+id/empty_view"
