--- a/app/src/main/res/layout/repos_activity.xml
+++ b/app/src/main/res/layout/repos_activity.xml
@@ -19,4 +19,14 @@
         android:gravity="center"
         android:visibility="gone"
         android:text="Loading data..." />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_add_circle_black_24dp"/>
+
 </RelativeLayout>
